# sensor_calibrate

./: .gitignore  CMakeLists.txt
color_point/: color_point.cpp  color_point.h
config/: lidar_camera_calib_config.yaml  lidar_motor_calib_config.yaml
example/: CameraLidarTrackExample.cpp  GeoSunR2000Websocket.cpp  LidarCameraCalibExample.cpp  LidarMotorCalibExample.cpp
general_client/: General_Client.cpp  General_Client.h  Log.cpp  Log.h  OptionCfg.h  Utils.cpp  Utils.h
general_client/log/: log.cpp  log.h
internal/: BagManager.cpp  BagManager.h  CeresFactors.h  CeresHelper.h  CeresOptimizer.cpp  CeresOptimizer.h  MotorManager.cpp  MotorManager.h  OptionsCfg.cpp  OptionsCfg.h  Parameter.hpp  PlaneExtraction.hpp  PlyIo.hpp  PoseD.h  Structs.h  TrajectoryManager.hpp  Utils.cpp  Utils.h  common_lib.h  so3_math.cpp  so3_math.h
io/: ReadPts.cpp  ReadPts.h
kdtree/: ikd_Tree.cpp  ikd_Tree.h
module/: CameraLidarTracker.cpp  CameraLidarTracker.h  ImuAnchorOptimization.cpp  ImuAnchorOptimization.h  LidarCameraCalibration.cpp  LidarCameraCalibration.h  LidarMotorCalibration.cpp  LidarMotorCalibration.h  LidarSlam.cpp  LidarSlam.h
ndt_omp/: gicp_omp_impl.hpp  ndt_omp.h  ndt_omp_impl.hpp
odometry/: IMU_Processing.cpp  IMU_Processing.h  common_lib.h  so3_math.h  voxelMapping.cpp  voxelMapping.h  voxel_map_util.cpp  voxel_map_util.h
plane_detection/: CMakeLists.txt  connectivitygraph.cpp  normalestimator.h  planedetector.cpp  pointcloudio.hpp
r3live/: IMU_Processing.cpp  IMU_Processing.h  r3live_lio.cpp  r3live_lio.h  voxel_map_util.cpp  voxel_map_util.h
scan/: ExtractFeature.cpp  ExtractFeature.h  scan.cpp  scan.h
